# ms-movies

./: Cargo.toml  vercel.json
api/: index.rs  main.rs
api/config/: config.rs
api/controllers/: health_controller.rs  mod.rs
api/dtos/: disk_space_dto.rs  health_response_dto.rs  mod.rs  validation_error_dto.rs
api/repositories/: db_repository.rs
api/routes/: health_route.rs  movie_route.rs
src/: main.rs
src/config/: banner.txt  config.rs
src/controllers/: health_controller.rs  movie_controller.rs
src/dtos/: database_status_dto.rs  health_response_dto.rs  mod.rs  movie_dto.rs  ram_space_dto.rs  validation_error_dto.rs
src/entities/: genre.rs  language.rs  mod.rs  movie.rs  movie_genre.rs  movie_language.rs
src/repositories/: db_repository.rs  genre_repository.rs  language_repository.rs  mod.rs  movie_genre_repository.rs  movie_language_repository.rs  movie_repository.rs
src/routes/: health_route.rs  mod.rs  movie_route.rs
src/services/: health_service.rs  mod.rs  movie_service.rs
src/tests/: mod.rs  product_controller_test.rs
